projects/compiler/test/typechecker/lambda/error_type_mismatch.3.out
Error at %FILE_NAME%:1:40
Return type mismatch for lambda function
  |  val _: String[] = [1, 2, 3].map(x => x + 1)
                                            ^
Expected String
but instead found Int
